--- a/home/index.html
+++ b/home/index.html
@@ -55,7 +55,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="#about">Sign In</a></li>
+          <li><a href="http://localhost:3000">Get Hired</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
